[metadata]
license_file = LICENSE
description-file = README.md
version = attr: goa_loader.__version__

[tool:pytest]
filterwarnings =
    error
    ignore::DeprecationWarning
    ignore::ImportWarning
    ignore::RuntimeWarning
    ignore::PendingDeprecationWarning
    ignore::FutureWarning
[flake8]
max-line-length = 88
max-doc-length = 200
per-file-ignores =
    ./goa_loader/__init__.py:E402, F401
ignore =
    # Conflicts with black
    E203
    # defaults flake8 ignores
    E121,E123,E126,E226,E24,E704,W503,W504
    # Function name should be lowercase
    N802
    # lowercase ... imported as non lowercase
    # Useful to ignore for "import keras.backend as K"
    N812
    # do not use bare 'except'
    E722
    # Escape characters check.
    # Conflict with pytest error message regex.
    W605
    # Ignore for tf.cond lambda
    E731

[isort]
profile = black
force_single_line = True
known_first_party = goa_loader
default_section = THIRDPARTY
line_length = 88
